添加freemarker、poi和富文本界面

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,6 +14,7 @@
         <h1>Spring Boot + Thymeleaf + Spring Security</h1>
         <h2>1. <a th:href="@{/admin}">admin management</a></h2>
         <h2>2. <a th:href="@{/user}">user</a></h2>
+        <h2>2. <a th:href="@{/ueditor/demo}">ueditor</a></h2>
         <h2>3. <a th:href="@{/about}">about</a></h2>
     </div>
 </div>
