--- a/src/main/resources/templates/ueditor/simpleDemo.html
+++ b/src/main/resources/templates/ueditor/simpleDemo.html
@@ -5,7 +5,7 @@
     <title>完整demo</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.config.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.all.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.all.js"></script>
     <!--建议手动加载语言，避免在IE下有时因为加载语言失败导致编辑器加载失败-->
     <script type="text/javascript" charset="utf-8" src="/jquery-3.4.1.min.js"></script>
     <style type="text/css">
@@ -16,11 +16,13 @@
 </head>
 <body>
 <div>
-    <h1>完整demo</h1>
-    <script id="editor" type="text/plain" style="width:800px;height:300px;"></script><!--调用文本编辑器 -->
+    <h1>富文本demo</h1>
+    <div>id<input id="id" value="1"></input></div>
+    <div>title<input id="title" value="test"></input></div>
+    <div> <script id="editor" type="text/plain" style="width:800px;height:300px;"></script></div>
 </div>
 <div id="btns">
-    <button onclick="poiExport()">poi导出</button>
+    <button onclick="save()">保存</button>
     <button onclick="ftlExport()">ftl导出</button>
 </div>
 
@@ -30,12 +32,14 @@
     //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
     var ue = UE.getEditor('editor');
 
-    function poiExport() {
+    function save() {
         var content = UE.getEditor('editor').getContent();
         $.ajax({
             type: "POST",
-            url: "poiExport",
-            data: {"title": "test", "content": content},
+            url: "/ueditor/save",
+            data: {
+                "title": $("#title").val(), "content": content, "id": $("#id").val()
+            },
             async: false,
             error: function (request) {
                 alert("提交出错 error");
@@ -50,16 +54,23 @@
         var content = UE.getEditor('editor').getContent();
         $.ajax({
             type: "POST",
-            url: "ftlExport",
-            data: {"title": "test", "content": content},// 序列化表单值
-            async: false,
-            error: function (request) {
-                alert("提交出错 error");
+            url: "/ueditor/ftlExport",
+            data: {
+                "title": $("#title").val(), "content": content, "id": $("#id").val()
             },
+            async: false,
+            error:
+
+                function (request) {
+                    alert("提交出错 error");
+                }
+
+            ,
             success: function (data) {
                 alert("success");
             }
-        });
+        })
+        ;
     }
 </script>
 </body>
