--- a/src/main/resources/templates/main/about.html
+++ b/src/main/resources/templates/main/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-<div class="container" id="content">
+<div class="container">
     <div class="starter-template">
         <h1>steve frank</h1>
     </div>
