--- a/src/main/resources/templates/main/home.html
+++ b/src/main/resources/templates/main/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-<div class="container" id="content">
+<div class="container">
     <div class="starter-template">
         <h2>1. <a th:href="@{/admin}">admin management</a></h2>
         <h2>2. <a th:href="@{/user}">user</a></h2>
