--- a/src/main/resources/templates/main/moses.html
+++ b/src/main/resources/templates/main/moses.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-<div class="container" id="content">
+<div class="container">
     <div class="starter-template">
         <h2>1. <a th:href="@{/ueditor/}">ueditor</a></h2>
     </div>
