--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-<div class="container" id="content">
+<div class="container">
     <div class="starter-template">
         <h1>user</h1>
         <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
