--- a/src/main/resources/templates/documents/demo.html
+++ b/src/main/resources/templates/documents/demo.html
@@ -4,9 +4,11 @@
 <head>
     <title>完整demo</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.config.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.all.js"></script>
-    <script type="text/javascript" charset="utf-8" src="/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="/js/bootstrap-4.3.1/css/bootstrap.min.css">
+    <script charset="utf-8" src="/js/jquery-3.4.1.min.js"></script>
+    <script charset="utf-8" src="/js/ueditor/ueditor.config.js"></script>
+    <script charset="utf-8" src="/js/ueditor/ueditor.all.js"></script>
+    <script charset="utf-8" src="/js/ueditor/lang/zh-cn/zh-cn.js"></script>
     <style type="text/css">
         div {
             width: 100%;
