--- a/src/main/resources/templates/main/documents.html
+++ b/src/main/resources/templates/main/documents.html
@@ -11,7 +11,11 @@
 <div th:replace="fragments/header :: header"></div>
 <div class="container">
     <div class="starter-template">
-        <h2>1. <a th:href="@{/tender}">tender</a></h2>
+        <h2>1. <a th:href="@{/tender/}">比选</a></h2>
+        <h2>2. <a th:href="@{/tender/}">单一来源</a></h2>
+        <h2>3. <a th:href="@{/tender/}">竞争性谈判</a></h2>
+        <h2>4. <a th:href="@{/tender/}">询价</a></h2>
+        <h2>5. <a th:href="@{/tender/}">招标</a></h2>
     </div>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
