--- a/src/main/resources/templates/documents/tender.html
+++ b/src/main/resources/templates/documents/tender.html
@@ -10,61 +10,72 @@
     <script type="text/javascript">
         //实例化编辑器
         //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-        var ue = UE.getEditor('editor');
-
-        function save() {
-            var content = ue.getContent();
-            var param = {
-                "title": $("#title").val(), "content": content, "id": $("#id").val()
-            };
-            $.ajax({
-                url: "/tender/save",
-                type: "post",
-                data: JSON.stringify(param),
-                contentType: "application/json",
-                dataType: "json",
-                success: function (data) {
-                    alert(data);
-                }
-            })
-        }
+        // var ue = UE.getEditor('editor');
+        //
+        // function save() {
+        //     var content = ue.getContent();
+        //     var param = {
+        //         "projectId": $("#projectId").val(), "content": content, "templateId": $("#id").val()
+        //     };
+        //     $.ajax({
+        //         url: "/tender/save",
+        //         type: "post",
+        //         data: JSON.stringify(param),
+        //         contentType: "application/json",
+        //         dataType: "json",
+        //         success: function (data) {
+        //             alert(data);
+        //         }
+        //     })
+        // }
 
         function exportPlanTender() {
-            window.open("/tender/exportPlanTender/1");
-        }
+            window.open("/tender/export?tmplId=" + $("#templateId").val() + "&prjId=" + $("#projectId").val());
+            // var content = ue.getContent();
+            // var param = {
+            //     "projectId": $("#projectId").val(), "content": content, "templateId": $("#templateId").val()
+            // };
+            // $.ajax({
+            //     url: "/tender/exportPlanTender",
+            //     type: "post",
+            //     data: JSON.stringify(param),
+            //     contentType: "application/json",
+            //     dataType: "json",
+            //     success: function (data) {
+            //         var blob = new Blob([data]);
+            //         var link = document.createElement('a');
+            //         link.href = window.URL.createObjectURL(blob);
+            //         link.download = "myFileName.docx";
+            //         link.click();
+            //     }
+            // })
 
+        }
     </script>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
 <div class="container">
     <div class="starter-template">
-        <h1>招标文档导出</h1>
+        <h1>招标方案导出</h1>
         <div class="btn-toolbar mb-3" role="toolbar">
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <span class="input-group-text">id</span>
+                    <span class="input-group-text">templateId</span>
                 </div>
-                <input type="text" class="form-control" placeholder="id" aria-label="id" value="1" id="id">
+                <input type="text" class="form-control" placeholder="templateId" aria-label="templateId"
+                       value="98B545B8790F38D2E0530300A8C0490A" id="templateId">
             </div>
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <span class="input-group-text">title</span>
+                    <span class="input-group-text">projectId</span>
                 </div>
-                <input type="text" class="form-control" placeholder="title" aria-label="title" value="test" id="title">
+                <input type="text" class="form-control" placeholder="projectId" aria-label="projectId"
+                       value="200000000002168" id="projectId">
             </div>
             <div class="btn-group">
-                <div class="input-group-prepend">
-                    <button type="button" class="btn btn-secondary" onclick="save()">保存</button>
-                </div>
-                <button type="button" class="btn btn-secondary" onclick="exportPlanTender()">导出招标方案</button>
+                <button type="button" class="btn btn-secondary" onclick="exportPlanTender()">导出</button>
             </div>
-        </div>
-        <div>
-            <script id="editor" type="text/plain" style="width:800px;height:300px;"></script>
-        </div>
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="aa" aria-label="aa">
         </div>
     </div>
 </div>
