格式化代码

--- a/src/main/resources/templates/main/moses.html
+++ b/src/main/resources/templates/main/moses.html
@@ -11,7 +11,7 @@
 <div th:replace="fragments/header :: header"></div>
 <div class="container">
     <div class="starter-template">
-        <h2>1. <a th:href="@{/ueditor/20200329}">ueditor</a></h2>
+        <h2>1. <a th:href="@{/async/async_task}">异步调用</a></h2>
     </div>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
