--- a/src/main/resources/templates/main/documents.html
+++ b/src/main/resources/templates/main/documents.html
@@ -11,7 +11,8 @@
 <div th:replace="fragments/header :: header"></div>
 <div class="container">
     <div class="starter-template">
-        <h2>1. <a th:href="@{/tender/20200329}">富文本导出</a></h2>
+        <h2>1. <a th:href="@{/ueditor/20200329}">富文本导出</a></h2>
+        <h2>1. <a th:href="@{/ueditor/demo}">ueditor示例</a></h2>
     </div>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
