--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -20,7 +20,7 @@
                                placeholder="password" required="true"/>
                     </div>
                     <div class="form-group">
-                        <img onclick="this.src='/getCaptchaCode?d='+new Date()*1" src="/getCaptchaCode"/>
+                        <img onclick="this.src='/checkCode?d='+new Date()*1" src="/checkCode"/>
                         <input type="text" name="vrifyCode" id="vrifyCode" class="form-control input-lg"
                                placeholder="vrifyCode" required="true"/>
                     </div>
