--- a/src/main/resources/templates/documents/ueditor.html
+++ b/src/main/resources/templates/documents/ueditor.html
@@ -59,7 +59,7 @@
     <h1>文档导出</h1>
     <button type="button" class="btn btn-lg btn-primary" onclick="save()">保存</button>
     <button type="button" class="btn btn-lg btn-primary" onclick="ftlExport()">导出</button>
-    <button type="button" class="btn btn-lg btn-primary" onclick="downloadFile()">下载</button>
+<!--    <button type="button" class="btn btn-lg btn-primary" onclick="downloadFile()">下载</button>-->
     <div class="form-group row">
         <label for="templateId" class="col-sm-2 col-form-label">模板ID：</label>
         <div class="col-sm-10">
