--- a/src/main/resources/templates/main/documents.html
+++ b/src/main/resources/templates/main/documents.html
@@ -11,8 +11,10 @@
 <div th:replace="fragments/header :: header"></div>
 <div class="container">
     <div class="starter-template">
-        <h2>1. <a th:href="@{/ueditor/20200329}">富文本导出</a></h2>
-        <h2>1. <a th:href="@{/ueditor/demo}">ueditor示例</a></h2>
+<!--        <h2>1. <a th:href="@{/ueditor/20200329}">富文本导出</a></h2>-->
+<!--        <h2>2. <a th:href="@{/ueditor/demo}">ueditor示例</a></h2>-->
+        <h2>1. <a th:href="@{/abroad/1}">海外项目</a></h2>
+        <h2>2. <a th:href="@{/domestic/1}">国内项目</a></h2>
     </div>
 </div>
 <div th:replace="fragments/footer :: footer"></div>
